# aws-nomad-spark-autoscaler

./: .sparkler  Cargo.toml  README.md
aws-nomad/: Cargo.toml
aws-nomad/src/: config.rs  lib.rs
src/: config.rs  main.rs  structs.rs
